# adventofcode-rust

./: .gitignore  Cargo.toml  README.md  get_data.py
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  download.rs  lib.rs  main.rs  util.rs
