[package]
name = "adventofcode-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hashbrown = "0.14.3"
indicatif = "0.17.8"
itertools = "0.12.1"
num = "0.4.1"
once_cell = "1.19.0"
regex = "1.10.3"
